results/SVCOMP/specgen/log-athrow1-2024_02_24_13_25_17.txt
class A extends Exception {}

class athrow1 {
    //@ ensures \result == false;
    public static boolean func() {
        A a = new A();
        try {
            throw a;
        } catch (Exception e) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/athrow1.java:12: error: unreachable statement
        return true;
        ^
1 error

class A extends Exception {}

class athrow1 {
    //@ ensures \result == false;
    public static boolean func() {
        A a = new A();
        try {
            throw a;
        } catch (Exception e) {
            return false;
        }
        //@ unreachable
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/athrow1.java:12: error: unreachable statement
        //@ unreachable
            ^
1 error

class A extends Exception {}

class athrow1 {
    //@ ensures \result == false;
    public static boolean func() {
        A a = new A();
        try {
            throw a;
        } catch (Exception e) {
            return false;
        }
        //@ unreachable
    }
}
/home/max/Documents/JMLGPT/tmp/athrow1.java:12: error: unreachable statement
        //@ unreachable
            ^
1 error

class A extends Exception {}

class athrow1 {
    //@ ensures \result == false;
    public static boolean func() {
        A a = new A();
        try {
            throw a;
        } catch (Exception e) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/athrow1.java:12: error: unreachable statement
        return true;
        ^
1 error

class A extends Exception {}

class athrow1 {
    //@ ensures \result == false;
    public static boolean func() {
        A a = new A();
        try {
            throw a;
        } catch (Exception e) {
            return false;
        }
        return false; // This statement is reachable if the exception is caught
    }
}
/home/max/Documents/JMLGPT/tmp/athrow1.java:12: error: unreachable statement
        return false; // This statement is reachable if the exception is caught
        ^
1 error

class A extends Exception {}

class athrow1 {
    //@ ensures \result == false;
    public static boolean func() {
        A a = new A();
        try {
            throw a;
        } catch (Exception e) {
            return false;
        }
        return false; // This statement is reachable if the exception is caught
    }
}
/home/max/Documents/JMLGPT/tmp/athrow1.java:12: error: unreachable statement
        return false; // This statement is reachable if the exception is caught
        ^
1 error

class A extends Exception {}

class athrow1 {
    //@ ensures \result == false;
    public static boolean func() {
        A a = new A();
        try {
            throw a;
        } catch (Exception e) {
            return false;
        }
        return false; // This statement is reachable if the exception is caught
    }
}
/home/max/Documents/JMLGPT/tmp/athrow1.java:12: error: unreachable statement
        return false; // This statement is reachable if the exception is caught
        ^
1 error

